teste/parser.output
Grammar

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao_lista declaracao
    3                 | declaracao

    4 declaracao: var_declaracao
    5           | fun_declaracao

    6 var_declaracao: tipo_especificador ID SEMICOL
    7               | tipo_especificador ID LBRACKET NUM RBRACKET SEMICOL

    8 tipo_especificador: INT
    9                   | VOID

   10 fun_declaracao: tipo_especificador ID LPAREN params RPAREN composto_decl

   11 params: param_lista
   12       | VOID

   13 param_lista: param_lista COMMA param
   14            | param

   15 param: tipo_especificador ID
   16      | tipo_especificador ID LBRACKET RBRACKET

   17 composto_decl: LBRACE local_declaracoes statement_lista RBRACE

   18 local_declaracoes: local_declaracoes var_declaracao
   19                  | ε

   20 statement_lista: statement_lista statement
   21                | ε

   22 statement: expressao_decl
   23          | composto_decl
   24          | selecao_decl
   25          | iteracao_decl
   26          | retorno_decl

   27 expressao_decl: expressao SEMICOL
   28               | SEMICOL

   29 selecao_decl: IF LPAREN expressao RPAREN statement
   30             | IF LPAREN expressao RPAREN statement ELSE statement

   31 iteracao_decl: WHILE LPAREN expressao RPAREN statement

   32 retorno_decl: RETURN SEMICOL
   33             | RETURN expressao SEMICOL

   34 expressao: var ASSIGN expressao
   35          | simples_expressao

   36 var: ID
   37    | ID LBRACKET expressao RBRACKET

   38 simples_expressao: soma_expressao relacional soma_expressao
   39                  | soma_expressao

   40 relacional: SMAL
   41           | SMALEQ
   42           | GREAT
   43           | GREATEQ
   44           | EQ
   45           | DIFF

   46 soma_expressao: soma_expressao soma termo
   47               | termo

   48 soma: PLUS
   49     | MINUS

   50 termo: termo mult fator
   51      | fator

   52 mult: MULT
   53     | DIV

   54 fator: LPAREN expressao RPAREN
   55      | var
   56      | ativacao
   57      | NUM
   58      | MINUS fator

   59 ativacao: ID LPAREN args RPAREN

   60 args: arg_lista
   61     | ε

   62 arg_lista: arg_lista COMMA expressao
   63          | expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM (258) 7 57
    ID (259) 6 7 10 15 16 36 37 59
    IF (260) 29 30
    ELSE (261) 30
    INT (262) 8
    RETURN (263) 32 33
    VOID (264) 9 12
    WHILE (265) 31
    PLUS (266) 48
    MINUS (267) 49 58
    MULT (268) 52
    DIV (269) 53
    SMAL (270) 40
    SMALEQ (271) 41
    GREAT (272) 42
    GREATEQ (273) 43
    EQ (274) 44
    DIFF (275) 45
    ASSIGN (276) 34
    SEMICOL (277) 6 7 27 28 32 33
    COMMA (278) 13 62
    LPAREN (279) 10 29 30 31 54 59
    RPAREN (280) 10 29 30 31 54 59
    LBRACKET (281) 7 16 37
    RBRACKET (282) 7 16 37
    LBRACE (283) 17
    RBRACE (284) 17
    LOWER_THAN_ELSE (285)
    UMINUS (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    programa (33)
        on left: 1
        on right: 0
    declaracao_lista (34)
        on left: 2 3
        on right: 1 2
    declaracao (35)
        on left: 4 5
        on right: 2 3
    var_declaracao (36)
        on left: 6 7
        on right: 4 18
    tipo_especificador (37)
        on left: 8 9
        on right: 6 7 10 15 16
    fun_declaracao (38)
        on left: 10
        on right: 5
    params (39)
        on left: 11 12
        on right: 10
    param_lista (40)
        on left: 13 14
        on right: 11 13
    param (41)
        on left: 15 16
        on right: 13 14
    composto_decl (42)
        on left: 17
        on right: 10 23
    local_declaracoes (43)
        on left: 18 19
        on right: 17 18
    statement_lista (44)
        on left: 20 21
        on right: 17 20
    statement (45)
        on left: 22 23 24 25 26
        on right: 20 29 30 31
    expressao_decl (46)
        on left: 27 28
        on right: 22
    selecao_decl (47)
        on left: 29 30
        on right: 24
    iteracao_decl (48)
        on left: 31
        on right: 25
    retorno_decl (49)
        on left: 32 33
        on right: 26
    expressao (50)
        on left: 34 35
        on right: 27 29 30 31 33 34 37 54 62 63
    var (51)
        on left: 36 37
        on right: 34 55
    simples_expressao (52)
        on left: 38 39
        on right: 35
    relacional (53)
        on left: 40 41 42 43 44 45
        on right: 38
    soma_expressao (54)
        on left: 46 47
        on right: 38 39 46
    soma (55)
        on left: 48 49
        on right: 46
    termo (56)
        on left: 50 51
        on right: 46 47 50
    mult (57)
        on left: 52 53
        on right: 50
    fator (58)
        on left: 54 55 56 57 58
        on right: 50 51 58
    ativacao (59)
        on left: 59
        on right: 56
    args (60)
        on left: 60 61
        on right: 59
    arg_lista (61)
        on left: 62 63
        on right: 60 62


State 0

    0 $accept: • programa $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    programa            go to state 3
    declaracao_lista    go to state 4
    declaracao          go to state 5
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 1

    8 tipo_especificador: INT •

    $default  reduce using rule 8 (tipo_especificador)


State 2

    9 tipo_especificador: VOID •

    $default  reduce using rule 9 (tipo_especificador)


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 9


State 4

    1 programa: declaracao_lista •
    2 declaracao_lista: declaracao_lista • declaracao

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (programa)

    declaracao          go to state 10
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 5

    3 declaracao_lista: declaracao •

    $default  reduce using rule 3 (declaracao_lista)


State 6

    4 declaracao: var_declaracao •

    $default  reduce using rule 4 (declaracao)


State 7

    6 var_declaracao: tipo_especificador • ID SEMICOL
    7               | tipo_especificador • ID LBRACKET NUM RBRACKET SEMICOL
   10 fun_declaracao: tipo_especificador • ID LPAREN params RPAREN composto_decl

    ID  shift, and go to state 11


State 8

    5 declaracao: fun_declaracao •

    $default  reduce using rule 5 (declaracao)


State 9

    0 $accept: programa $end •

    $default  accept


State 10

    2 declaracao_lista: declaracao_lista declaracao •

    $default  reduce using rule 2 (declaracao_lista)


State 11

    6 var_declaracao: tipo_especificador ID • SEMICOL
    7               | tipo_especificador ID • LBRACKET NUM RBRACKET SEMICOL
   10 fun_declaracao: tipo_especificador ID • LPAREN params RPAREN composto_decl

    SEMICOL   shift, and go to state 12
    LPAREN    shift, and go to state 13
    LBRACKET  shift, and go to state 14


State 12

    6 var_declaracao: tipo_especificador ID SEMICOL •

    $default  reduce using rule 6 (var_declaracao)


State 13

   10 fun_declaracao: tipo_especificador ID LPAREN • params RPAREN composto_decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    tipo_especificador  go to state 16
    params              go to state 17
    param_lista         go to state 18
    param               go to state 19


State 14

    7 var_declaracao: tipo_especificador ID LBRACKET • NUM RBRACKET SEMICOL

    NUM  shift, and go to state 20


State 15

    9 tipo_especificador: VOID •
   12 params: VOID •

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (tipo_especificador)


State 16

   15 param: tipo_especificador • ID
   16      | tipo_especificador • ID LBRACKET RBRACKET

    ID  shift, and go to state 21


State 17

   10 fun_declaracao: tipo_especificador ID LPAREN params • RPAREN composto_decl

    RPAREN  shift, and go to state 22


State 18

   11 params: param_lista •
   13 param_lista: param_lista • COMMA param

    COMMA  shift, and go to state 23

    $default  reduce using rule 11 (params)


State 19

   14 param_lista: param •

    $default  reduce using rule 14 (param_lista)


State 20

    7 var_declaracao: tipo_especificador ID LBRACKET NUM • RBRACKET SEMICOL

    RBRACKET  shift, and go to state 24


State 21

   15 param: tipo_especificador ID •
   16      | tipo_especificador ID • LBRACKET RBRACKET

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 15 (param)


State 22

   10 fun_declaracao: tipo_especificador ID LPAREN params RPAREN • composto_decl

    LBRACE  shift, and go to state 26

    composto_decl  go to state 27


State 23

   13 param_lista: param_lista COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    tipo_especificador  go to state 16
    param               go to state 28


State 24

    7 var_declaracao: tipo_especificador ID LBRACKET NUM RBRACKET • SEMICOL

    SEMICOL  shift, and go to state 29


State 25

   16 param: tipo_especificador ID LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 30


State 26

   17 composto_decl: LBRACE • local_declaracoes statement_lista RBRACE

    $default  reduce using rule 19 (local_declaracoes)

    local_declaracoes  go to state 31


State 27

   10 fun_declaracao: tipo_especificador ID LPAREN params RPAREN composto_decl •

    $default  reduce using rule 10 (fun_declaracao)


State 28

   13 param_lista: param_lista COMMA param •

    $default  reduce using rule 13 (param_lista)


State 29

    7 var_declaracao: tipo_especificador ID LBRACKET NUM RBRACKET SEMICOL •

    $default  reduce using rule 7 (var_declaracao)


State 30

   16 param: tipo_especificador ID LBRACKET RBRACKET •

    $default  reduce using rule 16 (param)


State 31

   17 composto_decl: LBRACE local_declaracoes • statement_lista RBRACE
   18 local_declaracoes: local_declaracoes • var_declaracao

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_lista)

    var_declaracao      go to state 32
    tipo_especificador  go to state 33
    statement_lista     go to state 34


State 32

   18 local_declaracoes: local_declaracoes var_declaracao •

    $default  reduce using rule 18 (local_declaracoes)


State 33

    6 var_declaracao: tipo_especificador • ID SEMICOL
    7               | tipo_especificador • ID LBRACKET NUM RBRACKET SEMICOL

    ID  shift, and go to state 35


State 34

   17 composto_decl: LBRACE local_declaracoes statement_lista • RBRACE
   20 statement_lista: statement_lista • statement

    NUM      shift, and go to state 36
    ID       shift, and go to state 37
    IF       shift, and go to state 38
    RETURN   shift, and go to state 39
    WHILE    shift, and go to state 40
    MINUS    shift, and go to state 41
    SEMICOL  shift, and go to state 42
    LPAREN   shift, and go to state 43
    LBRACE   shift, and go to state 26
    RBRACE   shift, and go to state 44

    composto_decl      go to state 45
    statement          go to state 46
    expressao_decl     go to state 47
    selecao_decl       go to state 48
    iteracao_decl      go to state 49
    retorno_decl       go to state 50
    expressao          go to state 51
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 35

    6 var_declaracao: tipo_especificador ID • SEMICOL
    7               | tipo_especificador ID • LBRACKET NUM RBRACKET SEMICOL

    SEMICOL   shift, and go to state 12
    LBRACKET  shift, and go to state 14


State 36

   57 fator: NUM •

    $default  reduce using rule 57 (fator)


State 37

   36 var: ID •
   37    | ID • LBRACKET expressao RBRACKET
   59 ativacao: ID • LPAREN args RPAREN

    LPAREN    shift, and go to state 58
    LBRACKET  shift, and go to state 59

    $default  reduce using rule 36 (var)


State 38

   29 selecao_decl: IF • LPAREN expressao RPAREN statement
   30             | IF • LPAREN expressao RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 39

   32 retorno_decl: RETURN • SEMICOL
   33             | RETURN • expressao SEMICOL

    NUM      shift, and go to state 36
    ID       shift, and go to state 37
    MINUS    shift, and go to state 41
    SEMICOL  shift, and go to state 61
    LPAREN   shift, and go to state 43

    expressao          go to state 62
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 40

   31 iteracao_decl: WHILE • LPAREN expressao RPAREN statement

    LPAREN  shift, and go to state 63


State 41

   58 fator: MINUS • fator

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    var       go to state 64
    fator     go to state 65
    ativacao  go to state 57


State 42

   28 expressao_decl: SEMICOL •

    $default  reduce using rule 28 (expressao_decl)


State 43

   54 fator: LPAREN • expressao RPAREN

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    expressao          go to state 66
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 44

   17 composto_decl: LBRACE local_declaracoes statement_lista RBRACE •

    $default  reduce using rule 17 (composto_decl)


State 45

   23 statement: composto_decl •

    $default  reduce using rule 23 (statement)


State 46

   20 statement_lista: statement_lista statement •

    $default  reduce using rule 20 (statement_lista)


State 47

   22 statement: expressao_decl •

    $default  reduce using rule 22 (statement)


State 48

   24 statement: selecao_decl •

    $default  reduce using rule 24 (statement)


State 49

   25 statement: iteracao_decl •

    $default  reduce using rule 25 (statement)


State 50

   26 statement: retorno_decl •

    $default  reduce using rule 26 (statement)


State 51

   27 expressao_decl: expressao • SEMICOL

    SEMICOL  shift, and go to state 67


State 52

   34 expressao: var • ASSIGN expressao
   55 fator: var •

    ASSIGN  shift, and go to state 68

    $default  reduce using rule 55 (fator)


State 53

   35 expressao: simples_expressao •

    $default  reduce using rule 35 (expressao)


State 54

   38 simples_expressao: soma_expressao • relacional soma_expressao
   39                  | soma_expressao •
   46 soma_expressao: soma_expressao • soma termo

    PLUS     shift, and go to state 69
    MINUS    shift, and go to state 70
    SMAL     shift, and go to state 71
    SMALEQ   shift, and go to state 72
    GREAT    shift, and go to state 73
    GREATEQ  shift, and go to state 74
    EQ       shift, and go to state 75
    DIFF     shift, and go to state 76

    $default  reduce using rule 39 (simples_expressao)

    relacional  go to state 77
    soma        go to state 78


State 55

   47 soma_expressao: termo •
   50 termo: termo • mult fator

    MULT  shift, and go to state 79
    DIV   shift, and go to state 80

    $default  reduce using rule 47 (soma_expressao)

    mult  go to state 81


State 56

   51 termo: fator •

    $default  reduce using rule 51 (termo)


State 57

   56 fator: ativacao •

    $default  reduce using rule 56 (fator)


State 58

   59 ativacao: ID LPAREN • args RPAREN

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    $default  reduce using rule 61 (args)

    expressao          go to state 82
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57
    args               go to state 83
    arg_lista          go to state 84


State 59

   37 var: ID LBRACKET • expressao RBRACKET

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    expressao          go to state 85
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 60

   29 selecao_decl: IF LPAREN • expressao RPAREN statement
   30             | IF LPAREN • expressao RPAREN statement ELSE statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    expressao          go to state 86
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 61

   32 retorno_decl: RETURN SEMICOL •

    $default  reduce using rule 32 (retorno_decl)


State 62

   33 retorno_decl: RETURN expressao • SEMICOL

    SEMICOL  shift, and go to state 87


State 63

   31 iteracao_decl: WHILE LPAREN • expressao RPAREN statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    expressao          go to state 88
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 64

   55 fator: var •

    $default  reduce using rule 55 (fator)


State 65

   58 fator: MINUS fator •

    $default  reduce using rule 58 (fator)


State 66

   54 fator: LPAREN expressao • RPAREN

    RPAREN  shift, and go to state 89


State 67

   27 expressao_decl: expressao SEMICOL •

    $default  reduce using rule 27 (expressao_decl)


State 68

   34 expressao: var ASSIGN • expressao

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    expressao          go to state 90
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 69

   48 soma: PLUS •

    $default  reduce using rule 48 (soma)


State 70

   49 soma: MINUS •

    $default  reduce using rule 49 (soma)


State 71

   40 relacional: SMAL •

    $default  reduce using rule 40 (relacional)


State 72

   41 relacional: SMALEQ •

    $default  reduce using rule 41 (relacional)


State 73

   42 relacional: GREAT •

    $default  reduce using rule 42 (relacional)


State 74

   43 relacional: GREATEQ •

    $default  reduce using rule 43 (relacional)


State 75

   44 relacional: EQ •

    $default  reduce using rule 44 (relacional)


State 76

   45 relacional: DIFF •

    $default  reduce using rule 45 (relacional)


State 77

   38 simples_expressao: soma_expressao relacional • soma_expressao

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    var             go to state 64
    soma_expressao  go to state 91
    termo           go to state 55
    fator           go to state 56
    ativacao        go to state 57


State 78

   46 soma_expressao: soma_expressao soma • termo

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    var       go to state 64
    termo     go to state 92
    fator     go to state 56
    ativacao  go to state 57


State 79

   52 mult: MULT •

    $default  reduce using rule 52 (mult)


State 80

   53 mult: DIV •

    $default  reduce using rule 53 (mult)


State 81

   50 termo: termo mult • fator

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    var       go to state 64
    fator     go to state 93
    ativacao  go to state 57


State 82

   63 arg_lista: expressao •

    $default  reduce using rule 63 (arg_lista)


State 83

   59 ativacao: ID LPAREN args • RPAREN

    RPAREN  shift, and go to state 94


State 84

   60 args: arg_lista •
   62 arg_lista: arg_lista • COMMA expressao

    COMMA  shift, and go to state 95

    $default  reduce using rule 60 (args)


State 85

   37 var: ID LBRACKET expressao • RBRACKET

    RBRACKET  shift, and go to state 96


State 86

   29 selecao_decl: IF LPAREN expressao • RPAREN statement
   30             | IF LPAREN expressao • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 97


State 87

   33 retorno_decl: RETURN expressao SEMICOL •

    $default  reduce using rule 33 (retorno_decl)


State 88

   31 iteracao_decl: WHILE LPAREN expressao • RPAREN statement

    RPAREN  shift, and go to state 98


State 89

   54 fator: LPAREN expressao RPAREN •

    $default  reduce using rule 54 (fator)


State 90

   34 expressao: var ASSIGN expressao •

    $default  reduce using rule 34 (expressao)


State 91

   38 simples_expressao: soma_expressao relacional soma_expressao •
   46 soma_expressao: soma_expressao • soma termo

    PLUS   shift, and go to state 69
    MINUS  shift, and go to state 70

    $default  reduce using rule 38 (simples_expressao)

    soma  go to state 78


State 92

   46 soma_expressao: soma_expressao soma termo •
   50 termo: termo • mult fator

    MULT  shift, and go to state 79
    DIV   shift, and go to state 80

    $default  reduce using rule 46 (soma_expressao)

    mult  go to state 81


State 93

   50 termo: termo mult fator •

    $default  reduce using rule 50 (termo)


State 94

   59 ativacao: ID LPAREN args RPAREN •

    $default  reduce using rule 59 (ativacao)


State 95

   62 arg_lista: arg_lista COMMA • expressao

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    MINUS   shift, and go to state 41
    LPAREN  shift, and go to state 43

    expressao          go to state 99
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 96

   37 var: ID LBRACKET expressao RBRACKET •

    $default  reduce using rule 37 (var)


State 97

   29 selecao_decl: IF LPAREN expressao RPAREN • statement
   30             | IF LPAREN expressao RPAREN • statement ELSE statement

    NUM      shift, and go to state 36
    ID       shift, and go to state 37
    IF       shift, and go to state 38
    RETURN   shift, and go to state 39
    WHILE    shift, and go to state 40
    MINUS    shift, and go to state 41
    SEMICOL  shift, and go to state 42
    LPAREN   shift, and go to state 43
    LBRACE   shift, and go to state 26

    composto_decl      go to state 45
    statement          go to state 100
    expressao_decl     go to state 47
    selecao_decl       go to state 48
    iteracao_decl      go to state 49
    retorno_decl       go to state 50
    expressao          go to state 51
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 98

   31 iteracao_decl: WHILE LPAREN expressao RPAREN • statement

    NUM      shift, and go to state 36
    ID       shift, and go to state 37
    IF       shift, and go to state 38
    RETURN   shift, and go to state 39
    WHILE    shift, and go to state 40
    MINUS    shift, and go to state 41
    SEMICOL  shift, and go to state 42
    LPAREN   shift, and go to state 43
    LBRACE   shift, and go to state 26

    composto_decl      go to state 45
    statement          go to state 101
    expressao_decl     go to state 47
    selecao_decl       go to state 48
    iteracao_decl      go to state 49
    retorno_decl       go to state 50
    expressao          go to state 51
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 99

   62 arg_lista: arg_lista COMMA expressao •

    $default  reduce using rule 62 (arg_lista)


State 100

   29 selecao_decl: IF LPAREN expressao RPAREN statement •
   30             | IF LPAREN expressao RPAREN statement • ELSE statement

    ELSE  shift, and go to state 102

    $default  reduce using rule 29 (selecao_decl)


State 101

   31 iteracao_decl: WHILE LPAREN expressao RPAREN statement •

    $default  reduce using rule 31 (iteracao_decl)


State 102

   30 selecao_decl: IF LPAREN expressao RPAREN statement ELSE • statement

    NUM      shift, and go to state 36
    ID       shift, and go to state 37
    IF       shift, and go to state 38
    RETURN   shift, and go to state 39
    WHILE    shift, and go to state 40
    MINUS    shift, and go to state 41
    SEMICOL  shift, and go to state 42
    LPAREN   shift, and go to state 43
    LBRACE   shift, and go to state 26

    composto_decl      go to state 45
    statement          go to state 103
    expressao_decl     go to state 47
    selecao_decl       go to state 48
    iteracao_decl      go to state 49
    retorno_decl       go to state 50
    expressao          go to state 51
    var                go to state 52
    simples_expressao  go to state 53
    soma_expressao     go to state 54
    termo              go to state 55
    fator              go to state 56
    ativacao           go to state 57


State 103

   30 selecao_decl: IF LPAREN expressao RPAREN statement ELSE statement •

    $default  reduce using rule 30 (selecao_decl)
